# fire-ircbot

./: .gitignore  .replit  bare.py  bot.py  checks.py  commands.py  config.py  core.py  handlers.py  ircbot-old.py  ircbot.py  lastmsg.txt  logs.py  markov.py  mastermessages.txt  modres.sh  overrides.py  pyproject.toml  replit_zip_error_log.txt  threads.py  timers.py
