[tool.poetry]
name = "Repl_IRC_Bot"
version = "0.1.0"
description = "A bot I made for irc chats"
authors = ["Firepup Sixfifty <firepup650@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apiclient = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
