[tool.poetry]
name = "fire-ircbot"
version = "1.0.0"
description = "An ircbot"
authors = ["Firepup Sixfifty <firepup650@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
apiclient = "^1.0.4"
python-dotenv = "^1.0.0"
pylast = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
